<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.yolo.fun_habits.framework.presentation.habitdetail.HabitDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Theme.AppCompat.Light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background_color"
        android:theme="@style/Theme.AppCompat.Light">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height"
                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/toolbar_back_button"
                    android:layout_width="@dimen/toolbar_item_margin"
                    android:layout_height="@dimen/toolbar_item_margin"
                    android:src="@drawable/ic_arrow_back_grey_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tool_bar_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/toolbar_title_margin"
                    android:layout_marginEnd="@dimen/default_view_margin"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="Edit Habit"
                    android:textColor="@color/default_grey"
                    android:textSize="@dimen/page_title_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintLeft_toRightOf="@id/toolbar_back_button"
                    app:layout_constraintRight_toLeftOf="@id/toolbar_delete_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/toolbar_delete_button"
                    android:layout_width="@dimen/toolbar_item_margin"
                    android:layout_height="@dimen/toolbar_item_margin"
                    android:layout_marginEnd="24dp"
                    android:src="@drawable/ic_delete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/toolbar_save_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/toolbar_save_button"
                    android:layout_width="@dimen/toolbar_item_margin"
                    android:layout_height="@dimen/toolbar_item_margin"
                    android:layout_marginEnd="@dimen/default_view_margin"
                    android:src="@drawable/ic_done_grey_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/habit_body_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tool_bar">

            <EditText
                android:id="@+id/habit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_enter_a_title"
                android:minHeight="@dimen/toolbar_height"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="#000"
                android:textSize="22sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_between_spacing"
                android:layout_gravity="bottom"
                android:background="@color/app_background_color"></View>

            <com.yydcdut.markdown.MarkdownEditText
                android:id="@+id/habit_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_view_margin"
                android:background="#fff"
                android:gravity="top"
                android:hint="@string/text_habit_description"
                android:imeOptions="flagNoExtractUi"
                android:minHeight="300dp"
                android:padding="5dp"
                android:paddingStart="@dimen/default_view_margin"
                android:paddingTop="@dimen/default_view_margin"
                android:paddingEnd="@dimen/default_view_margin"
                android:textColor="#000"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
